<resources>
    <string name="app_name">Sync Client</string>

    <!--Sync-->
    <string name="sync_title">Main</string>
    <string name="btn_sync">Sync</string>
    <string name="btn_syncing">Syncing</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_send_file">Send files</string>
    <string name="waiting">Waiting</string>
    <string name="done">Done</string>
    <string name="upload">Upload</string>
    <string name="download">Download</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="auto_scroll">Autoscroll</string>

    <!--Settings-->
    <string name="settings_title">Settings</string>
    <string name="settings_content_desc_avatar">The avatar image of my  github profile</string>
    <string name="directory_selected_label">Directory selected:</string>
    <string name="none">none</string>
    <string name="btn_choose">Choose in Dialog</string>
    <string name="outside_directory">Outside directory</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="remove_it">Remove it?</string>
    <string name="ip_address">Address</string>
    <string name="ip_port">Port</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="add">Add</string>
    <string name="save">Save</string>

    <!--Exit-->
    <string name="exit">Exit</string>
    <string name="exit_question">Do you want to leave this application?</string>

    <!--Sync info-->
    <string name="added_count">Device added files count:</string>
    <string name="removed_count">Device removed files count</string>
    <string name="uploaded_count">Device uploaded to server files count</string>
    <string name="updated_count">Device updated files count</string>
    <string name="server_removed_count">Server removed files count</string>
    <string name="database_added_count">Database added files count</string>


</resources>
