<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
            android:id="@+id/addFolderButton"
            android:icon="@android:drawable/ic_menu_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:title="@string/add"
            app:showAsAction="always" />

    <item
            android:id="@+id/saveSettingsButton"
            android:icon="@android:drawable/ic_menu_save"
            android:title="@string/save"
            app:showAsAction="always" />

    <item
            android:id="@+id/checkConnectionButton"
            android:icon="@android:drawable/ic_popup_sync"
            android:title="@string/btn_sync"
            app:showAsAction="always"/>
</menu>