<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
            android:id="@+id/syncStatusTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:title=""
            app:showAsAction="always" />

    <item
            android:id="@+id/autoscroll_button"
            android:icon="@android:drawable/checkbox_on_background"
            android:title="@string/auto_scroll"
            app:showAsAction="collapseActionView" />

    <item
            android:id="@+id/connectionStatusTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:title="@string/disconnected"
            app:showAsAction="always" />

    <item
            android:id="@+id/sync_button"
            android:icon="@android:drawable/ic_popup_sync"
            android:title="@string/btn_sync"
            app:showAsAction="always" />

</menu>