<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.MainActivity"
    android:gravity="top">

    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/directory_selected_label"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

    <TextView
            android:id="@+id/textDirectory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:text="@string/none"
            tools:ignore="UnusedAttribute"/>

    <Button
            android:id="@+id/btnChoose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/btn_choose"/>

    <EditText
            android:id="@+id/ip_address"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

    <EditText
            android:id="@+id/port"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

</LinearLayout>