<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="wrap_content">

    <RelativeLayout
            android:id="@+id/settingsConnectionPanel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <LinearLayout
                android:id="@+id/added_count_panel"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:baselineAligned="false"
                android:orientation="horizontal">

            <TextView
                    android:layout_height="wrap_content"
                    android:text="@string/added_count"
                    style="@style/CustomTextBox"
                    android:layout_width="0dp"
                    android:layout_weight=".70">
            </TextView>

            <TextView
                    android:id="@+id/added_count_textview"
                    android:layout_height="wrap_content"
                    style="@style/CustomTextBox"
                    android:layout_width="0dp"
                    android:layout_weight=".30">
            </TextView>
        </LinearLayout>

        <LinearLayout
                android:id="@+id/removed_count_panel"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:baselineAligned="false"
                android:layout_below="@id/added_count_panel"
                android:orientation="horizontal">

            <TextView
                    android:layout_height="wrap_content"
                    android:text="@string/removed_count"
                    style="@style/CustomTextBox"
                    android:layout_width="0dp"
                    android:layout_weight=".70">
            </TextView>

            <TextView
                    android:id="@+id/removed_count_textview"
                    android:layout_height="wrap_content"
                    style="@style/CustomTextBox"
                    android:layout_width="0dp"
                    android:layout_weight=".30">
            </TextView>
        </LinearLayout>

        <LinearLayout
                android:id="@+id/uploaded_count_panel"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:baselineAligned="false"
                android:layout_below="@id/removed_count_panel"
                android:orientation="horizontal">

            <TextView
                    android:layout_height="wrap_content"
                    android:text="@string/uploaded_count"
                    style="@style/CustomTextBox"
                    android:layout_width="0dp"
                    android:layout_weight=".70">
            </TextView>

            <TextView
                    android:id="@+id/uploaded_count_textview"
                    android:layout_height="wrap_content"
                    style="@style/CustomTextBox"
                    android:layout_width="0dp"
                    android:layout_weight=".30">
            </TextView>
        </LinearLayout>

        <LinearLayout
                android:id="@+id/updated_count_panel"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:baselineAligned="false"
                android:layout_below="@id/uploaded_count_panel"
                android:orientation="horizontal">

            <TextView
                    android:layout_height="wrap_content"
                    android:text="@string/updated_count"
                    style="@style/CustomTextBox"
                    android:layout_width="0dp"
                    android:layout_weight=".70">
            </TextView>

            <TextView
                    android:id="@+id/updated_count_textview"
                    android:layout_height="wrap_content"
                    style="@style/CustomTextBox"
                    android:layout_width="0dp"
                    android:layout_weight=".30">
            </TextView>
        </LinearLayout>

        <LinearLayout
                android:id="@+id/server_removed_count_panel"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:baselineAligned="false"
                android:layout_below="@id/updated_count_panel"
                android:orientation="horizontal">

            <TextView
                    android:layout_height="wrap_content"
                    android:text="@string/server_removed_count"
                    style="@style/CustomTextBox"
                    android:layout_width="0dp"
                    android:layout_weight=".70">
            </TextView>

            <TextView
                    android:id="@+id/server_removed_count_textview"
                    android:layout_height="wrap_content"
                    style="@style/CustomTextBox"
                    android:layout_width="0dp"
                    android:layout_weight=".30">
            </TextView>
        </LinearLayout>

        <LinearLayout
                android:id="@+id/database_added_count_panel"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:baselineAligned="false"
                android:layout_below="@id/server_removed_count_panel"
                android:orientation="horizontal">

            <TextView
                    android:layout_height="wrap_content"
                    android:text="@string/database_added_count"
                    style="@style/CustomTextBox"
                    android:layout_width="0dp"
                    android:layout_weight=".70">
            </TextView>

            <TextView
                    android:id="@+id/database_added_count_textview"
                    android:layout_height="wrap_content"
                    style="@style/CustomTextBox"
                    android:layout_width="0dp"
                    android:layout_weight=".30">
            </TextView>
        </LinearLayout>


    </RelativeLayout>


    <Button
            android:id="@+id/btn_apply_sync"
            android:layout_width="360dp"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:layout_below="@+id/settingsConnectionPanel"
            android:text="@string/btn_sync"
    />

</RelativeLayout>